Bug 327262 - KOrganizer shows the crash handler window when it is closed
Summary: KOrganizer shows the crash handler window when it is closed
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.11.3
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
: 328750 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-07 08:49 UTC by Javi
Modified: 2013-12-13 09:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:


Attachments
Valgrind log (17.31 KB, text/x-log)
2013-11-08 08:08 UTC, Javi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Javi 2013-11-07 08:49:10 UTC
Application: korganizer (4.11.3)
KDE Platform Version: 4.11.3
Qt Version: 4.8.5
Operating System: Linux 3.7.10-1.16-desktop x86_64
Distribution: "openSUSE 12.3 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:

Just minime KOrganizer to the tray bar and the crash handler windows appears.

The crash can be reproduced every time.

-- Backtrace:
Application: KOrganizer (korganizer), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#5  deref (this=0xf1) at /usr/include/QtCore/qatomic_x86_64.h:133
#6  QList<QString>::~QList (this=0x1887598, __in_chrg=<optimized out>) at /usr/include/QtCore/qlist.h:731
#7  0x00007f5d6f21602b in ~QStringList (this=0x1887598, __in_chrg=<optimized out>) at /usr/include/QtCore/qstringlist.h:66
#8  ~Private (this=0x1887590, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.11.3/kcalcore/calfilter.cpp:45
#9  KCalCore::CalFilter::~CalFilter (this=0x17f99d0, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.11.3/kcalcore/calfilter.cpp:75
#10 0x00007f5d6f2120c2 in KCalCore::Calendar::Private::~Private (this=0x1319920, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.11.3/kcalcore/calendar.cpp:84
#11 0x00007f5d6f20bc65 in KCalCore::Calendar::~Calendar (this=0x1318d30, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.11.3/kcalcore/calendar.cpp:228
#12 0x00007f5d6715e899 in Akonadi::ETMCalendar::~ETMCalendar (this=0x1318d30, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.11.3/akonadi/calendar/etmcalendar.cpp:468
#13 0x00007f5d6719215d in deref (value=0x1318d30, d=0x12f7210) at /usr/include/QtCore/qsharedpointer_impl.h:342
#14 deref (this=0x1599688) at /usr/include/QtCore/qsharedpointer_impl.h:336
#15 ~ExternalRefCount (this=0x1599688, __in_chrg=<optimized out>) at /usr/include/QtCore/qsharedpointer_impl.h:401
#16 ~QSharedPointer (this=0x1599688, __in_chrg=<optimized out>) at /usr/include/QtCore/qsharedpointer_impl.h:466
#17 Akonadi::FreeBusyManagerPrivate::~FreeBusyManagerPrivate (this=0x1599670, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.11.3/akonadi/calendar/freebusymanager_p.h:45
#18 0x00007f5d671921e9 in Akonadi::FreeBusyManagerPrivate::~FreeBusyManagerPrivate (this=0x1599670, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.11.3/akonadi/calendar/freebusymanager_p.h:45
#19 0x00007f5d67187de8 in Akonadi::FreeBusyManager::~FreeBusyManager (this=0x1543840, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.11.3/akonadi/calendar/freebusymanager.cpp:744
#20 0x00007f5d67188097 in ~FreeBusyManagerStatic (this=0x1543840, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.11.3/akonadi/calendar/freebusymanager.cpp:727
#21 destroy () at /usr/src/debug/kdepimlibs-4.11.3/akonadi/calendar/freebusymanager.cpp:734
#22 0x00007f5d6c696f61 in __run_exit_handlers () from /lib64/libc.so.6
#23 0x00007f5d6c696fe5 in exit () from /lib64/libc.so.6
#24 0x00007f5d6c680a1c in __libc_start_main () from /lib64/libc.so.6
#25 0x0000000000408941 in _start ()

Reported using DrKonqi
Comment 1 Sergio Martins 2013-11-07 13:25:31 UTC
korganizer doesn't support minimize to system tray, can you explain ?

Are you running within kontact ?

The tray icon you see might be of the reminder deamon.
Comment 2 Javi 2013-11-07 14:15:12 UTC
(In reply to comment #1)
> korganizer doesn't support minimize to system tray, can you explain ?
> 
> Are you running within kontact ?
> 
> The tray icon you see might be of the reminder deamon.

It is true, my bad. The tray icon belongs to the reminder daemon. So this issue es when KOrganizer is closed.
Comment 3 Sergio Martins 2013-11-07 16:38:20 UTC
can you install valgrind, run valgrind korganizer --nofork &> a.log

wait for it, then close korganizer, wait for valgrind to exit, and attach the log ?
Comment 4 Javi 2013-11-07 16:44:52 UTC
Hi Sergio,

Yes, I'll do it as soon as I'll be with my computer.

Best regards,
Javier.

> El 07/11/2013, a las 17:38, "Sergio Martins" <iamsergio@gmail.com> escribió:
> 
> https://bugs.kde.org/show_bug.cgi?id=327262
> 
> --- Comment #3 from Sergio Martins <iamsergio@gmail.com> ---
> can you install valgrind, run valgrind korganizer --nofork &> a.log
> 
> wait for it, then close korganizer, wait for valgrind to exit, and attach the
> log ?
> 
> -- 
> You are receiving this mail because:
> You reported the bug.
Comment 5 Javi 2013-11-08 08:08:37 UTC
Created attachment 83421 [details]
Valgrind log
Comment 6 Sergio Martins 2013-11-08 09:58:42 UTC
Git commit 1a21d9535b7873db41bd6a2496c654e7b6addc88 by Sergio Martins.
Committed on 08/11/2013 at 09:56.
Pushed by smartins into branch 'KDE/4.11'.

Don't delete the filter twice.

Fixes crash at exit that wasn't reproducible before because
the calendar was leaked.
FIXED-IN: 4.11.4

M  +2    -1    korganizer/calendarview.cpp

http://commits.kde.org/kdepim/1a21d9535b7873db41bd6a2496c654e7b6addc88
Comment 7 Jekyll Wu 2013-12-13 09:08:48 UTC
*** Bug 328750 has been marked as a duplicate of this bug. ***