Don't delete the filter twice.

Fixes crash at exit that wasn't reproducible before because
the calendar was leaked.

BUG: 327262
FIXED-IN: 4.11.4